--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "classnames": "^2.5.1",
     "compressorjs": "^1.2.1",
     "mithril": "^2.3.7",
+    "nostr-tools": "^2.16.2",
     "qr-scanner": "^1.4.2",
     "qrcode": "^1.5.4",
     "svelte": "^5.38.10",
