--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "@types/qrcode": "^1.5.5",
     "@types/throttle-debounce": "^5.0.2",
     "@welshman/lib": "^0.4.6",
+    "@welshman/net": "^0.4.6",
     "@welshman/signer": "^0.4.6",
     "@welshman/store": "^0.4.6",
+    "@welshman/util": "^0.4.6",
     "classnames": "^2.5.1",
     "compressorjs": "^1.2.1",
     "mithril": "^2.3.7",
