--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build --mode=lib",
+    "build:demo": "tsc && vite build",
     "preview": "vite preview",
     "prepare": "husky"
   },
